Update 파이선에서 사용하는 이미지 전처리-이미지 향상법.md

--- a/파이선에서 사용하는 이미지 전처리-이미지 향상법.md
+++ b/파이선에서 사용하는 이미지 전처리-이미지 향상법.md
@@ -22,7 +22,7 @@
 
 ---
 
-## 푸리에 변환의 마법
+## 푸리에 변환
 만일 이미지가 말할 수 있다면 그것은 수학이고 푸리에 변환은 문법일 것입니다(무슨말이지?)
 
 이 수학 도구는 이미지를 spatial domain 그리고 frequency domain로 변환시킵니다.
@@ -83,3 +83,199 @@ axs[1,1].axis('off')
 plt.tight_layout()
 plt.show()
 ```
+---
+## White Balancing: Color 향상법
+화이트 밸런싱은 이미지의 미학(aesthetics)을 크게(상당히 significantly) 변화시킬 수 있는 영향력 있는 기술입니다.
+
+이 과정(process lies)의 핵심(essence)은 사진 속 색상을 조정(adjusting)하여 실제로 흰색인 항목이 사진에서도 흰색으로 표현(portrayed)되도록 하는 것입니다.
+
+광원의 색상이 크게 다를 수(vary) 있고 결과적으로(consequently) 사진에서 색상이 인식되는(perceived) 방식에 영향을 미치기 때문에 이것은 중요한(crucial) 단계입니다.
+
+이미지의 색상이 정확하고 일관(consistent)되도록 보장함으로써 화이트 밸런싱은 사진을 캡처한 시점의 조명 조건에 관계없이(regardless of) 사진에 더 큰 진정성(authenticity)을 부여합니다.
+
+대부분의 최신 카메라에는 자동 화이트 밸런스 설정이 장착되어 있지만 이 프로세스를 더 깊이 이해하면 사진가가 수동(manually)으로 조정(adjustments)하여 우수한 결과를 얻을 수 있습니다.
+> empowers 권한을 부여하다
+
+이렇게 하면 사진의 미적(aesthetic) 품질을 극적으로 향상하여 육안(naked eye)으로 본 장면과 더 가깝게 정렬할 수 있습니다.
+
+그러나 모든 이미지가 화이트 밸런스를 사용하여 동일한 이점을 얻는 것은 아닙니다.
+
+어떤 경우에는 내가 가지고 있는 특정 이미지와 같이 이러한 기술이 크게 향상되지 않을 수 있습니다.
+
+화이트 밸런싱의 힘을 설명하기 위해 이미지 품질을 크게 향상시켜 잠재적인 효과를 보여주는 또 다른 예를 공유하겠습니다.
+> substantially 대체로
+> 
+![image](https://github.com/joesiheon496/new/assets/56191064/a062191e-146b-4cd8-8dcb-cbffad0f5c54)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/3a666b50-8025-4039-a3df-22b5377db505)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/f66d30a9-9bb1-4b72-841d-300a9a37eb1a)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/5f7ca590-ba95-4c1f-8aff-3ac30f96ac3b)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/2a69bffb-be9d-431b-b31a-38f36818f727)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/b395f771-7432-4b44-862f-848e52d2c514)
+
+```python
+import matplotlib.pyplot as plt
+import numpy as np
+from skimage import util
+
+def plot_channel_histogram(ax, image, percentile):
+    for channel, color in enumerate('rgb'):
+        channel_values = image[:, :, channel]
+        ax.step(np.arange(256),
+                np.bincount(channel_values.flatten(),
+                 minlength=256) / channel_values.size,
+                c=color, label=color)
+        ax.axvline(np.percentile(channel_values, percentile),
+                ls='--', c=color)
+
+    ax.set_xlim(0, 255)
+    ax.set_title(f'Color Channel with {percentile}th Percentile')
+    ax.set_xlabel('Channel Value')
+    ax.set_ylabel('Fraction of Pixels')
+    ax.legend()
+
+def apply_white_patch(image, percentile):
+    # Convert and normalize the image
+    wp = util.img_as_ubyte((image * 1.0 / np.percentile(image,
+              percentile, axis=(0, 1))).clip(0, 1))
+    
+    # Create subplots
+    fig, axs = plt.subplots(1, 3, figsize=(15, 5))
+    
+    axs[0].imshow(image)
+    axs[0].set_title('Original Image')
+    
+    axs[1].imshow(wp)
+    axs[1].set_title(f'Image with {percentile}th Percentile Normalization')
+    
+    plot_channel_histogram(axs[2], image, percentile)
+    
+    plt.show()
+
+def main():
+    percentiles = [99, 90]
+    for percentile in percentiles:
+        apply_white_patch(image, percentile)
+```
+---
+## 히스토그램 조작: 대비와 밝기의 균형을 맞추는 기술
+히스토그램은 이미지 내의 색조(tonal) 분포를 그래픽으로 보여줍니다.
+
+그들은 사진에 있는 각 밝기 수준의 픽셀 수에 대한 통찰력을 제공하므로 사진가가 사진의 노출과 대비를 이해(comprehending)하는 데 도움(assisting)이 됩니다.
+> thereby 그것에의한
+
+히스토그램 조작 기술을 활용하여 사진가는 처음에는 대비가 좋지 않은(poor ) 이미지를 크게 향상시킬 수 있습니다.
+
+이러한 방법을 통해(empower) 밝기와 대비를 미세 조정할 수 있으므로 사진의 전반적인 품질이 향상됩니다.
+
+그러나 히스토그램 조작의 효율성은 이미지마다 다를 수 있음을 기억하는 것이 중요합니다.
+
+내 특정한 경우에는 히스토그램 조작을 사용했음에도 불구하고 이 기술이 내 이미지에 대해 원하는 향상을 생성하지 못했습니다.
+
+그럼에도 불구하고(Nevertheless) 히스토그램 조작의 가능성을 보여주기 위해 이 방법이 이미지 품질을 크게(remarkably ) 향상시킨 예를 제시하겠습니다.
+
+![image](https://github.com/joesiheon496/new/assets/56191064/4268b327-2f42-46c5-8edc-2879f5d9f8ad)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/71a7091a-320f-4ea5-af13-b6959e731159)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/e32d55a6-d67a-4f43-99cb-fc078af7bc2e)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/d92be722-f1f1-4632-a9d8-c4baadf0f218)
+
+![image](https://github.com/joesiheon496/new/assets/56191064/1a1d2f34-170d-4263-bd87-629d3968d12e)
+
+```python
+from skimage import color, exposure
+import numpy as np
+import matplotlib.pyplot as plt
+
+
+# Original image
+image = dark_image.copy()
+
+# Convert the image to grayscale
+gray_image = color.rgb2gray(image)
+
+# Compute the histogram and cumulative distribution function
+# (CDF) of the gray image
+hist, bin_centers = exposure.histogram(gray_image)
+cdf = np.cumsum(hist) / np.sum(hist)
+
+# Split the color image into separate RGB channels
+red_channel = image[:, :, 0]
+green_channel = image[:, :, 1]
+blue_channel = image[:, :, 2]
+
+# Compute color multipliers from CDF for each channel
+multipliers = 0.5 + 0.5 * np.concatenate([cdf]*3)
+red_mult = multipliers[0]
+green_mult = multipliers[1]
+blue_mult = multipliers[2]
+
+# Apply global histogram equalization to each channel
+red_eq = exposure.equalize_hist(red_channel)
+green_eq = exposure.equalize_hist(green_channel)
+blue_eq = exposure.equalize_hist(blue_channel)
+
+# Adjust channels by corresponding multipliers
+red_final = red_eq * red_mult
+green_final = green_eq * green_mult
+blue_final = blue_eq * blue_mult
+
+# Recombine the channels into a color image
+adjusted_image = np.stack((red_final, green_final, blue_final), axis=-1)
+
+# Create a 4x2 subplot for original and adjusted channels and images
+fig, axs = plt.subplots(4, 2, figsize=(10, 20))
+
+channels = [
+    ('Red', red_channel, red_eq), 
+    ('Green', green_channel, green_eq),
+    ('Blue', blue_channel, blue_eq)
+]
+
+for i, (color_name, original, adjusted) in enumerate(channels):
+    axs[i, 0].set_title(f'Original {color_name} Channel')
+    axs[i, 0].imshow(original, cmap=f'{color_name}s')
+    axs[i, 1].set_title(f'Adjusted {color_name} Channel')
+    axs[i, 1].imshow(adjusted, cmap=f'{color_name}s')
+
+# Plot the original and final combined images
+axs[3, 0].set_title('Original Image')
+axs[3, 0].imshow(image)
+axs[3, 1].set_title('Adjusted Image')
+axs[3, 1].imshow(adjusted_image)
+
+# Show the subplots
+plt.show()
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
